tests/ui/variants/variant-result-noresult-used-as-type.stderr
error[E0573]: expected type, found variant `NoResult`
  --> $DIR/variant-result-noresult-used-as-type.rs:16:17
   |
LL |     fn new() -> NoResult<MyEnum, String> {
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^
   |
  --> $SRC_DIR/core/src/result.rs:LL:COL
   |
   = note: similarly named enum `Result` defined here
help: try using the variant's enum
   |
LL -     fn new() -> NoResult<MyEnum, String> {
LL +     fn new() -> foo::MyEnum {
   |
help: an enum with a similar name exists
   |
LL -     fn new() -> NoResult<MyEnum, String> {
LL +     fn new() -> Result<MyEnum, String> {
   |

error[E0573]: expected type, found variant `Result`
  --> $DIR/variant-result-noresult-used-as-type.rs:26:17
   |
LL |     fn new() -> Result<foo::MyEnum, String> {
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^ not a type
   |
help: consider importing one of these items instead
   |
LL +     use std::fmt::Result;
   |
LL +     use std::io::Result;
   |
LL +     use std::result::Result;
   |
LL +     use std::thread::Result;
   |

error[E0573]: expected type, found variant `Result`
  --> $DIR/variant-result-noresult-used-as-type.rs:32:13
   |
LL | fn new() -> Result<foo::MyEnum, String> {
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^ not a type
   |
help: consider importing one of these items instead
   |
LL + use std::fmt::Result;
   |
LL + use std::io::Result;
   |
LL + use std::result::Result;
   |
LL + use std::thread::Result;
   |

error[E0573]: expected type, found variant `NoResult`
  --> $DIR/variant-result-noresult-used-as-type.rs:37:15
   |
LL | fn newer() -> NoResult<foo::MyEnum, String> {
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
  --> $SRC_DIR/core/src/result.rs:LL:COL
   |
   = note: similarly named enum `Result` defined here
help: try using the variant's enum
   |
LL - fn newer() -> NoResult<foo::MyEnum, String> {
LL + fn newer() -> foo::MyEnum {
   |
help: an enum with a similar name exists
   |
LL - fn newer() -> NoResult<foo::MyEnum, String> {
LL + fn newer() -> Result<foo::MyEnum, String> {
   |

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0573`.
